templates/dashkiosk_template.yaml
---
# Source: dashkiosk/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-dashkiosk
  labels:
    app.kubernetes.io/name: dashkiosk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: dashkiosk-2.0.0
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: dashkiosk
    app.kubernetes.io/instance: release-name
---
# Source: dashkiosk/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-dashkiosk
  labels:
    app.kubernetes.io/name: dashkiosk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: dashkiosk-2.0.0
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: dashkiosk
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashkiosk
        app.kubernetes.io/instance: release-name
      annotations:
        checksum/secret: d65c0a36cbdbd603e62fa468e04e0c1e8cd70ad69576ba56ae3630b8b9534db7
    spec:
      containers:
        - name: dashkiosk
          image: "quay.io/t3n/dashkiosk:v2.7.8"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            {}
---
# Source: dashkiosk/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-dashkiosk
  labels:
    app.kubernetes.io/name: dashkiosk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: dashkiosk-2.0.0
spec:
  rules:
    - host: example.local
      http:
        paths:
          - path: 
            backend:
              serviceName: dashkiosk
              servicePort: http
